# com.webos.service.tts

./: CMakeLists.txt  oss-pkg-info.yaml
files/conf/: tts_config.json
files/sysbus/: com.webos.service.tts.api.json.in  com.webos.service.tts.perm.json.in  com.webos.service.tts.role.json.in  com.webos.service.tts.service.in  tts.groups.json
files/systemd/: com.webos.service.tts.service.in
src/: tts_main.cpp
src/core/: AudioEngineFactory.cpp  EngineHandler.cpp  RequestHandler.cpp  RequestQueue.cpp  StatusHandler.cpp  TTSEngineFactory.cpp  TTSManager.cpp  TTSRequest.cpp
src/engines/audio/pulse/: CMakeLists.txt  PulseAudioEngine.cpp  PulseAudioEngine.h  PulseAudioEngineFactory.cpp  PulseAudioEngineFactory.h
src/engines/tts/google/: CMakeLists.txt  GoogleTTSEngine.cpp  GoogleTTSEngine.h  GoogleTTSEngineFactory.cpp  GoogleTTSEngineFactory.h
src/include/: AudioEngine.h  AudioEngineFactory.h  EngineHandler.h  Request.h  RequestHandler.h  RequestQueue.h  StatusHandler.h  StatusObserver.h  TTSConfig.h  TTSEngine.h  TTSEngineFactory.h  TTSErrors.h  TTSLog.h  TTSLunaService.h  TTSLunaUtils.h  TTSManager.h  TTSParameters.h  TTSRequest.h  TTSRequestTypes.h  TTSUtils.h
src/luna/: TTSLunaService.cpp
src/utils/: ParameterListManager.cpp  ParameterListManager.h  TTSConfig.cpp  TTSErrors.cpp  TTSLog.cpp  TTSParameters.cpp  TTSUtils.cpp
